--- a/server/public/views/index.html
+++ b/server/public/views/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="/styles/bootstrap.min.css" />
     <link rel="stylesheet" href="/styles/styles.css" />
     <script src="/vendor/angular.min.js" type="text/javascript"></script>
-<!--    <script src="/vendor/angular-route.min.js" type="text/javascript"></script>  -->
+    <script src="/vendor/angular-route.min.js" type="text/javascript"></script> 
     <script src="/scripts/client.js" type="text/javascript"></script>
   </head>
 
