--- a/server/public/views/templates/warehouse.html
+++ b/server/public/views/templates/warehouse.html
@@ -1,1 +1,20 @@
 <h2>{{warehouse.message}}</h2>
+
+<table>
+  <thead>
+    <tr>
+      <th>
+        Warehouse
+      </th>
+      <th>
+        Fulfillment Days
+      </th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr class="warehousebleh" ng-repeat="warehousebleh in warehouse.warehouses">
+      <td><input type="text" name="warehouse" class="form-control col-md-3" ng-model="warehousebleh.warehouse"/></td>
+      <td><input type="number" name="fulfillment_days" class="form-control col-md-3" ng-model="warehousebleh.fulfillment_days"/></td>
+  </tr>
+  </tbody>
+</table>
