--- a/server/public/views/templates/customers.html
+++ b/server/public/views/templates/customers.html
@@ -1,4 +1,14 @@
-<div class="customers" ng-repeat="customers in customersController.books track by $index">
-  <input type="text" name="first_name" ng-model="customers.first_name" class="form-control"></p>
-  <input type="text" name="last_name" ng-model="customers.last_name" class="form-control"></p>
-</div>
+<table>
+  <thead>
+    <tr>
+      <th>First Name</th>
+      <th>Last Name</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr class="customer" ng-repeat="customer in customers.customers">
+      <td><input type="text" name="first_name" ng-model="customer.first_name" class="form-control col-md-1"></td>
+      <td><input type="text" name="last_name" ng-model="customer.last_name" class="form-control col-md-1"></td>
+    </tr>
+  </tbody>
+</table>
